--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/2b4e3e1ba5.js" crossorigin="anonymous"></script>
-  <title>Anki App</title>
+  <title>Flashcard App</title>
 
 </head>
 
@@ -19,31 +19,6 @@
 
 
   </div>
-
-  <!-- <ul>
-    <li class=" p-3 border-b border-gray-700">
-    <div class="flex items-center justify-between active:text-gray-600">
-      <div>
-        <h2 class="text-base font-semibold">First deck added</h2>
-        <small class="">Cards for study: 6</small>
-      </div>
-      <a href="#" class="">
-        <i class="fa-solid fa-angle-right text-xl" aria-hidden="true"></i>
-      </a>
-    </div>
-    </li>
-    <li class="p-3 border-b border-gray-700">
-      <div class="flex items-center justify-between active:text-gray-600">
-        <div>
-          <h2 class="text-base font-semibold">First deck added</h2>
-          <small class="">Cards for study: 6</small>
-        </div>
-        <a href="#" class="">
-          <i class="fa-solid fa-angle-right text-xl" aria-hidden="true"></i>
-        </a>
-      </div>
-    </li>
-    </ul> -->
 
 
 
