--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- Favicon general -->
+  <link rel="icon" href="./src/icon/favicon.ico" type="image/x-icon">
+
+  <!-- Iconos para diferentes tamaños y plataformas -->
+  <link rel="icon" type="image/png" sizes="16x16" href="./src/icon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/icon/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="./src/icon/apple-touch-icon.png">
+
+  <!-- Iconos para Android Chrome -->
+  <link rel="icon" type="image/png" sizes="192x192" href="./src/icon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./src/icon/android-chrome-512x512.png">
+
+  <!-- Web manifest -->
+  <link rel="manifest" href="./src/icon/site.webmanifest">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/2b4e3e1ba5.js" crossorigin="anonymous"></script>
   <title>Flashcard App</title>
